--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 17:05:02 2018</p>
+         Last Run: Fri Nov 30 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>44</td>
-                        <td>77</td>
+                        <td>51</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
@@ -43,10 +43,10 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>49</td>
-                        <td>74</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>48</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -57,8 +57,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>53</td>
-                        <td>77</td>
+                        <td>52</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-6",
+                 "-8",
                  "-8"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-2",
+                 "-3",
                  "-3"
                ]
              }
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "44",
-                 "49",
-                 "53"
+                 "51",
+                 "48",
+                 "52"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "74",
-                 "77"
+                 "78",
+                 "76",
+                 "78"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 17:05:02 2018</p>
+         Last Run: Fri Nov 30 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -257,11 +257,11 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>31</td>
-                        <td>77</td>
+                        <td>24</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -273,7 +273,7 @@
                         <td>-4</td>
                         <td>-9</td>
                         <td>15</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "40",
-                 "31",
+                 "24",
                  "15"
                ]
              },
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "77",
-                 "73"
+                 "78",
+                 "74"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 17:05:02 2018</p>
+         Last Run: Fri Nov 30 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,15 +460,15 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-9</td>
                         <td>-13</td>
                         <td>7</td>
                         <td>86</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>W</td>
-                        <td>58</td>
+                        <td>WSW</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -478,21 +478,21 @@
                         <td>7</td>
                         <td>86</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>W</td>
-                        <td>36</td>
+                        <td>6</td>
+                        <td>WSW</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-11</td>
-                        <td>-16</td>
+                        <td>-15</td>
                         <td>7</td>
-                        <td>88</td>
+                        <td>87</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
-                        <td>21</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "-13",
                  "-14",
-                 "-16"
+                 "-15"
                ]
              },
              {
@@ -603,7 +603,7 @@
                "data":[
                  "86",
                  "86",
-                 "88"
+                 "87"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "36",
-                 "21"
+                 "61",
+                 "38",
+                 "23"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 17:05:02 2018</p>
+         Last Run: Fri Nov 30 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,14 +676,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-14</td>
-                        <td>-19</td>
+                        <td>-13</td>
+                        <td>-18</td>
                         <td>5</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -691,23 +691,23 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>5</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-15</td>
-                        <td>-20</td>
+                        <td>-14</td>
+                        <td>-19</td>
                         <td>5</td>
                         <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-18",
                  "-19",
-                 "-19",
-                 "-20"
+                 "-19"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-13",
                  "-14",
-                 "-14",
-                 "-15"
+                 "-14"
                ]
              }
            ]
@@ -816,8 +816,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "80",
                  "81",
-                 "82",
                  "84"
                ]
              },
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
+                 "13",
                  "7",
-                 "5"
+                 "4"
                ]
              }
            ]
