--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 18:05:02 2018</p>
+         Last Run: Fri Nov 30 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -43,9 +43,9 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-3</td>
-                        <td>-8</td>
-                        <td>48</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>50</td>
                         <td>76</td>
                         <td>0</td>
                         <td>13</td>
@@ -57,7 +57,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>52</td>
+                        <td>49</td>
                         <td>78</td>
                         <td>0</td>
                         <td>13</td>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-8",
+                 "-6",
                  "-8"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-3",
+                 "-2",
                  "-3"
                ]
              }
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "51",
-                 "48",
-                 "52"
+                 "50",
+                 "49"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 18:05:02 2018</p>
+         Last Run: Fri Nov 30 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>40</td>
-                        <td>80</td>
+                        <td>42</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -257,15 +257,15 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>24</td>
-                        <td>78</td>
+                        <td>32</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>94</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>-4</td>
                         <td>-9</td>
                         <td>15</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>95</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "40",
-                 "24",
+                 "42",
+                 "32",
                  "15"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "78",
-                 "74"
+                 "81",
+                 "77",
+                 "73"
                ]
              },
              {
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "94",
-                 "94",
-                 "95"
+                 "93",
+                 "94"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 18:05:02 2018</p>
+         Last Run: Fri Nov 30 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,8 +461,8 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-9</td>
-                        <td>-13</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>7</td>
                         <td>86</td>
                         <td>0</td>
@@ -480,7 +480,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>38</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-11</td>
                         <td>-15</td>
                         <td>7</td>
-                        <td>87</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>23</td>
+                        <td>24</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-13",
+                 "-14",
                  "-14",
                  "-15"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-9",
+                 "-10",
                  "-10",
                  "-11"
                ]
@@ -603,7 +603,7 @@
                "data":[
                  "86",
                  "86",
-                 "87"
+                 "88"
                ]
              },
              {
@@ -613,8 +613,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "61",
-                 "38",
-                 "23"
+                 "39",
+                 "24"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 18:05:02 2018</p>
+         Last Run: Fri Nov 30 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -682,8 +682,8 @@
                         <td>80</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>13</td>
+                        <td>SW</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -695,7 +695,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>7</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>5</td>
-                        <td>84</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>4</td>
+                        <td>2</td>
                      </tr>
                   </tbody>
                </table>
@@ -818,7 +818,7 @@
                "data":[
                  "80",
                  "81",
-                 "84"
+                 "85"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
-                 "7",
-                 "4"
+                 "11",
+                 "5",
+                 "2"
                ]
              }
            ]
