--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 22:05:02 2018</p>
+         Last Run: Fri Nov 30 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -32,11 +32,11 @@
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-3</td>
-                        <td>-7</td>
-                        <td>52</td>
-                        <td>79</td>
+                        <td>-8</td>
+                        <td>53</td>
+                        <td>80</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>N</td>
                         <td>100</td>
                      </tr>
@@ -45,7 +45,7 @@
                         <td>Snow Showers</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>48</td>
+                        <td>50</td>
                         <td>77</td>
                         <td>0</td>
                         <td>13</td>
@@ -57,8 +57,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>51</td>
-                        <td>80</td>
+                        <td>54</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
+                 "-8",
                  "-6",
                  "-8"
                ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "52",
-                 "48",
-                 "51"
+                 "53",
+                 "50",
+                 "54"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
+                 "80",
                  "77",
-                 "80"
+                 "79"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 22:05:02 2018</p>
+         Last Run: Fri Nov 30 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,36 +248,36 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>44</td>
-                        <td>83</td>
+                        <td>32</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>99</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>34</td>
-                        <td>79</td>
+                        <td>24</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>98</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>17</td>
+                        <td>15</td>
                         <td>74</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>94</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "44",
-                 "34",
-                 "17"
+                 "32",
+                 "24",
+                 "15"
                ]
              },
              {
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "79",
+                 "82",
+                 "78",
                  "74"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "99",
-                 "98",
-                 "94"
+                 "94",
+                 "94",
+                 "89"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 22:05:02 2018</p>
+         Last Run: Fri Nov 30 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,19 +460,19 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>Partly Cloudy</td>
+                        <td>-9</td>
+                        <td>-9</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>84</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>WSW</td>
-                        <td>62</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
                         <td>7</td>
@@ -480,7 +480,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>40</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-11</td>
                         <td>-15</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>25</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-14",
+                 "-9",
                  "-14",
                  "-15"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-10",
+                 "-9",
                  "-10",
                  "-11"
                ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
                  "84",
-                 "86"
+                 "84",
+                 "85"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "62",
-                 "40",
-                 "25"
+                 "49",
+                 "27",
+                 "13"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 22:05:02 2018</p>
+         Last Run: Fri Nov 30 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -683,15 +683,15 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-14</td>
-                        <td>-19</td>
+                        <td>-13</td>
+                        <td>-18</td>
                         <td>5</td>
-                        <td>82</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -703,7 +703,7 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>5</td>
-                        <td>85</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-18",
-                 "-19",
+                 "-18",
                  "-19"
                ]
              },
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-13",
-                 "-14",
+                 "-13",
                  "-14"
                ]
              }
@@ -817,8 +817,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "82",
-                 "85"
+                 "80",
+                 "84"
                ]
              },
              {
@@ -827,7 +827,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
+                 "11",
                  "5",
                  "2"
                ]
